force-app/main/default/objects/dx_object_phasesenni__c/dx_object_phasesenni__c.object-meta.xml
<CustomObject>
    <label>建設DX_フェーズ遷移</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>建設DX_フェーズ遷移名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>