force-app/main/default/objects/dx_object_phasesenni__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>建設DX_フェーズ遷移</relationshipLabel>
    <relationshipName>AccountDX</relationshipName>
    <type>Lookup</type>
</CustomField>