force-app/main/default/objects/dx_object_phasesenni__c/fields/dx_object_phasesenni_syoudan__c.field-meta.xml
<CustomField>
    <fullName>dx_object_phasesenni_syoudan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>建設DX_フェーズ遷移</relationshipLabel>
    <relationshipName>DX</relationshipName>
    <type>Lookup</type>
</CustomField>