force-app/main/default/objects/dx_object_phasesenni__c/fields/dx_oppsname__c.field-meta.xml
<CustomField>
    <fullName>dx_oppsname__c</fullName>
    <label>商談名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>