force-app/main/default/objects/dx_object_phasesenni__c/fields/dx_phase_yuusendo__c.field-meta.xml
<CustomField>
    <fullName>dx_phase_yuusendo__c</fullName>
    <label>優先度</label>
    <length>200</length>
    <type>Text</type>
</CustomField>