force-app/main/default/objects/dx_object_phasesenni__c/fields/dx_phasesenni_phase__c.field-meta.xml
<CustomField>
    <fullName>dx_phasesenni_phase__c</fullName>
    <label>フェーズ</label>
    <length>200</length>
    <type>Text</type>
</CustomField>