force-app/main/default/objects/dx_object_phasesenni__c/fields/dx_snapshotbi__c.field-meta.xml
<CustomField>
    <fullName>dx_snapshotbi__c</fullName>
    <label>スナップショット日</label>
    <type>Date</type>
</CustomField>