force-app/main/default/objects/dx_object_phasesenni__c/fields/Field1sss__c.field-meta.xml
<CustomField>
    <fullName>Field1sss__c</fullName>
    <label>得意先名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>